@@ -21,16 +21,20 @@ typedef struct consul_impl_t
 {
   iot_logger_t *lc;
   iot_threadpool_t *pool;
+  edgex_secret_provider_t *sp;
+  devsdk_nvpairs *token;
   char *host;
   uint16_t port;
 } consul_impl_t;
 
-static bool edgex_consul_client_init (void *impl, iot_logger_t *logger, iot_threadpool_t *pool, const char *url)
+static bool edgex_consul_client_init (void *impl, iot_logger_t *logger, iot_threadpool_t *pool, edgex_secret_provider_t *sp, const char *url)
 {
   bool ok = false;
   consul_impl_t *consul = (consul_impl_t *)impl;
   consul->lc = logger;
   consul->pool = pool;
+  consul->sp = sp;
+  consul->token = edgex_secrets_getregtoken (sp);
   char *pos = strstr (url, "://");
   if (pos)
   {
@@ -59,6 +63,7 @@ static void edgex_consul_client_free (void *impl)
 {
   consul_impl_t *consul = (consul_impl_t *)impl;
   free (consul->host);
+  devsdk_nvpairs_free (consul->token);
   free (impl);
 }
 
@@ -132,6 +137,7 @@ static devsdk_nvpairs *read_pairs (iot_logger_t *lc, const char *json, devsdk_er
 struct updatejob
 {
   char *url;
+  devsdk_nvpairs *token;
   iot_logger_t *lc;
   devsdk_registry_updatefn updater;
   void *updatectx;
@@ -163,6 +169,7 @@ static void *poll_consul (void *p)
     }
     free (index.value);
     index.value = NULL;
+    ctx.reqhdrs = job->token;
     ctx.rsphdrs = &index;
     ctx.aborter = job->updatedone;
     edgex_http_get (job->lc, &ctx, job->url, edgex_http_write_cb, &err);
@@ -208,6 +215,7 @@ static devsdk_nvpairs *edgex_consul_client_get_config
   devsdk_nvpairs *result = NULL;
 
   memset (&ctx, 0, sizeof (edgex_ctx));
+  ctx.reqhdrs = consul->token;
   snprintf (url, URL_BUF_SIZE - 1, "http://%s:%u/v1/kv/" CONF_PREFIX "%s?recurse=true", consul->host, consul->port, servicename);
   edgex_http_get (consul->lc, &ctx, url, edgex_http_write_cb, err);
   if (err->code == 0)
@@ -229,6 +237,7 @@ static devsdk_nvpairs *edgex_consul_client_get_config
   job->updater = updater;
   job->updatectx = updatectx;
   job->updatedone = updatedone;
+  job->token = consul->token;
   iot_threadpool_add_work (consul->pool, poll_consul, job, -1);
 
   return result;
@@ -298,6 +307,7 @@ static void edgex_consul_client_write_config (void *impl, const char *servicenam
   char *json = json_serialize_to_string (jresult);
   json_value_free (jresult);
 
+  ctx.reqhdrs = consul->token;
   edgex_http_put (consul->lc, &ctx, url, json, edgex_http_write_cb, err);
 
   json_free_serialized_string (json);
@@ -347,6 +357,7 @@ static void edgex_consul_client_register_service
   char *json = json_serialize_to_string (params);
   json_value_free (params);
 
+  ctx.reqhdrs = consul->token;
   edgex_http_put (consul->lc, &ctx, url, json, edgex_http_write_cb, err);
 
   if (err->code)
@@ -375,6 +386,7 @@ static void edgex_consul_client_deregister_service
     consul->host, consul->port, servicename
   );
 
+  ctx.reqhdrs = consul->token;
   edgex_http_put (consul->lc, &ctx, url, NULL, edgex_http_write_cb, err);
 
   if (err->code)
@@ -407,6 +419,7 @@ static void edgex_consul_client_query_service
 
   *err = EDGEX_OK;
 
+  ctx.reqhdrs = consul->token;
   edgex_http_get (consul->lc, &ctx, url, edgex_http_write_cb, err);
 
   if (err->code == 0)
@@ -464,6 +477,7 @@ static bool edgex_consul_client_ping (void *impl)
     consul->port
   );
 
+  ctx.reqhdrs = consul->token;
   edgex_http_get (consul->lc, &ctx, url, NULL, &err);
   return (err.code == 0);
 }
